--- a/src/components/Dialog/components/dialogStyles.css
+++ b/src/components/Dialog/components/dialogStyles.css
@@ -4,9 +4,10 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
-*:focus {
-  border: 2px solid green;
+.dialog {
+  position: absolute;
+  inset: 0;
 }
